[package]
name = "security-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "testosquery"
path = "src/bin/testosquery.rs"

[[bin]]
name = "agent-daemon"
path = "src/bin/agent-daemon.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"


